# Falaise

./: CMakeLists.txt
modules/CAT/testing/: test_cat_driver.cxx  test_sultan_driver.cxx
modules/ChargedParticleTracking/ChargedParticleTracking/: alpha_finder_driver.cc  alpha_finder_driver.h  calorimeter_association_driver.cc  calorimeter_association_driver.h  charge_computation_driver.cc  charge_computation_driver.h  charged_particle_tracking_module.cc  charged_particle_tracking_module.h  vertex_extrapolation_driver.cc  vertex_extrapolation_driver.h
modules/Digitization/half_commissioning_analysis/: hc_rate_analysis.cxx
modules/Digitization/testing/: test_background_model.cxx  test_trigger_algorithm_test_time.cxx  test_trigger_algorithm_test_time_fake_ctw.cxx
modules/GammaClustering/GammaClustering/: gamma_clustering_driver.cc  gamma_clustering_driver.h  gamma_clustering_module.cc
modules/GammaTracking/GammaTracking/: gamma_tracking_driver.cc
modules/MockTrackerClusterizer/: CMakeLists.txt
modules/MockTrackerClusterizer/MockTrackerClusterizer/: mock_tracker_clustering_driver.cc  mock_tracker_clustering_driver.h  mock_tracker_clustering_module.cc
modules/MockTrackerClusterizer/source/falaise/snemo/reconstruction/: mock_tracker_clustering_driver.cc  mock_tracker_clustering_module.cc
modules/MockTrackerClusterizer/test/: test_mock_tracker_clustering_driver.cxx  test_mock_tracker_clustering_module.cxx
modules/MockTrackerClusterizer/testing/: test_mock_tracker_clustering_driver.cxx
modules/SNSimulation/src/: simulation_module.cc
modules/TrackFit/TrackFit/: trackfit_driver.cc  trackfit_tracker_fitting_module.cc  trackfit_tracker_fitting_module.h
programs/flvisualize/EventBrowser/: CMakeLists.txt  base_renderer.cc  boost_access.cc  box_volume.cc  brio_access.cc  browser_tracks.cc  calorimeter_hit_renderer.cc  composite_volume.cc  cylinder_volume.cc  default_draw_manager.cc  detector_manager.cc  display_2d.cc  display_3d.cc  display_options.cc  event_browser.cc  event_browser_ctrl.cc  event_browser_menu.cc  event_browser_module.cc  event_display.cc  event_selection.cc  event_server.cc  i_root_volume.cc  opengl_embedded_viewer.cc  pad_embedded_viewer.cc  polycone_volume.cc  root_utilities.cc  signal_handling.cc  snemo_draw_manager.cc  special_volume.cc  sphere_volume.cc  status_bar.cc  style_manager.cc  tracker_hit_renderer.cc  tube_volume.cc  visual_track_renderer.cc
programs/flvisualize/programs/: FLVisualizeArgs.cc  flvisualizemain.cxx
rational-resources/: README.rst
rational-resources/genbb/: GenBBManager.conf  GenericSources.conf  README.md  variants.conf
rational-resources/materials/: Elements.conf
rational-resources/urn/db/: experiment_infos.defs  (+2 more)
resources/: README.md
resources/genbb/: BackgroundSources.conf  CalibrationSources.conf
resources/materials/: Materials.conf
source/: CMakeLists.txt
source/falaise/: CMakeLists.txt  TrackerPreClustering.cmake
source/flreconstruct/: FLReconstructImpl.cc  FLReconstructPipeline.cc  FLReconstructResources.cc
source/flsimulate/: CMakeLists.txt  FLSimulateArgs.h  FLSimulateResources.cc  flsimulatemain.cc  flsimulatemain_legacy.cc
source/flsimulate/geant4_module/: CMakeLists.txt  base_physics_constructor.cc  base_physics_constructor.h  biasing_manager.cc  biasing_manager.h  data_libraries.h.in  detector_construction.cc  detector_construction.h  electromagnetic_field.cc  electromagnetic_field.h  em_field_equation_of_motion.cc  em_field_equation_of_motion.h  em_field_g4_stuff.cc  em_field_g4_stuff.h  em_physics_constructor.cc  em_physics_constructor.h  event_action.cc  event_action.h  g4_prng.cc  loggable_support.cc  loggable_support.h  magnetic_field.cc  manager.cc  manager.h  manager_parameters.cc  manager_parameters.h  neutrons_physics_constructor.cc  neutrons_physics_constructor.h  particles_physics_constructor.cc  particles_physics_constructor.h  physics_list.cc  physics_list.h  physics_list_utils.cc  physics_list_utils.h  primary_generator.cc  primary_generator.h  region_tools.cc  region_tools.h  run_action.cc  run_action.h  (+17 more)
(+419 files in other folders)
